Some symbolic icons are stretched vertically in the top bar
Affected version
- Fedora 32
- Gnome-shell 3.36.1
Bug summary
The symbolic icons of some apps (e.g. zoom
) in the headerbar are vertically stretched.
Steps to reproduce
- Install
zoom
- Open
zoom
What happened
The symbolic icon is stretched vertically.
What did you expect to happen
The ico is not stretched and is a regular square instead.
Relevant logs, screenshots, screencasts etc.
Edited by Andre Klapper